--- a/css/style.production.css
+++ b/css/style.production.css
@@ -168,6 +168,7 @@ button:focus,
 .grid__item {
     display: inline-block;
     width: 33%;
+    margin: 20px;
 }
 
 @supports(display: grid) {
@@ -177,7 +178,7 @@ button:focus,
         -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
-        margin: 0;
+        margin: 20px;
     }
 
     .grid__item {
@@ -213,6 +214,7 @@ button:focus,
 @media all and (max-width: 750px) {
     .grid {
         grid-gap: 10px;
+        margin: 0;
     }
 
     .grid__item:last-child {
