--- a/css/styles.css
+++ b/css/styles.css
@@ -89,11 +89,6 @@ button:focus,
     opacity: 0.8;
 }
 
-/* .button__secondary {
-    background-color: #e0b354;
-    color: #2b2b2b;
-} */
-
 .navigation-list__item--active {
     text-decoration: var(--no_text-decoration);
 }
@@ -152,6 +147,7 @@ button:focus,
     .grid {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
         grid-gap: 20px;
         margin: 20px;
     }
@@ -163,10 +159,6 @@ button:focus,
         margin: 0;
     }
 
-    .grid__item:last-child {
-        grid-column: 3 / 3;
-        grid-row: 1 / 3;
-    }
 }
 
 @media all and (max-width: 500px) {
@@ -175,7 +167,7 @@ button:focus,
     }
 }
 
-@media all and (min-width: 500px) and (max-width: 750px) {
+@media all and (min-width: 500px) and (max-width: 1000px) {
     .grid {
         grid-template-columns: 1fr 1fr;
     }
