--- a/css/style.production.css
+++ b/css/style.production.css
@@ -2,7 +2,7 @@
 * Prefixed by https://autoprefixer.github.io
 * PostCSS: v8.4.14,
 * Autoprefixer: v10.4.7
-* Browsers: last 2 version
+* Browsers: last 4 version
 */
 
 /*
@@ -89,6 +89,7 @@ button,
     border-radius: 3px;
     border-bottom: 2px solid var(--blackish);
     -webkit-transition: 0.9s opacity;
+    -o-transition: 0.9s opacity;
     transition: 0.9s opacity;
 }
 
@@ -99,11 +100,6 @@ button:focus,
     cursor: pointer;
     opacity: 0.8;
 }
-
-/* .button__secondary {
-    background-color: #e0b354;
-    color: #2b2b2b;
-} */
 
 .navigation-list__item--active {
     -webkit-text-decoration: var(--no_text-decoration);
@@ -177,8 +173,40 @@ button:focus,
         display: grid;
         -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr 1fr;
+        -ms-grid-rows: 1fr 20px 1fr;
+        grid-template-rows: 1fr 1fr;
         grid-gap: 20px;
         margin: 20px;
+    }
+
+    .grid>*:nth-child(1) {
+        -ms-grid-row: 1;
+        -ms-grid-column: 1;
+    }
+
+    .grid>*:nth-child(2) {
+        -ms-grid-row: 1;
+        -ms-grid-column: 3;
+    }
+
+    .grid>*:nth-child(3) {
+        -ms-grid-row: 1;
+        -ms-grid-column: 5;
+    }
+
+    .grid>*:nth-child(4) {
+        -ms-grid-row: 3;
+        -ms-grid-column: 1;
+    }
+
+    .grid>*:nth-child(5) {
+        -ms-grid-row: 3;
+        -ms-grid-column: 3;
+    }
+
+    .grid>*:nth-child(6) {
+        -ms-grid-row: 3;
+        -ms-grid-column: 5;
     }
 
     .grid__item {
@@ -188,13 +216,6 @@ button:focus,
         margin: 0;
     }
 
-    .grid__item:last-child {
-        -ms-grid-column: 3;
-        grid-column: 3 / 3;
-        -ms-grid-row: 1;
-        -ms-grid-row-span: 2;
-        grid-row: 1 / 3;
-    }
 }
 
 @media all and (max-width: 500px) {
@@ -204,7 +225,7 @@ button:focus,
     }
 }
 
-@media all and (min-width: 500px) and (max-width: 750px) {
+@media all and (min-width: 500px) and (max-width: 1000px) {
     .grid {
         -ms-grid-columns: 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr;
@@ -237,6 +258,10 @@ button:focus,
     -ms-flex-direction: column;
     flex-direction: column;
     text-align: center;
+}
+
+.center_main>div {
+    margin: 2em;
 }
 
 .past_experiences {
